--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
-    <link href="{% static "css/blog.css" %}" rel="stylesheet">
+    <link href="{% static 'css/blog.css' %}" rel="stylesheet">
 </head>
 <body>
     <div id="content">
@@ -11,7 +11,7 @@
         {% endblock %}
     </div>
     <div id="sidebar">
-        <h2>My blog</h2>
+        <h2 class="title">My blog</h2>
         <p>This is my blog.</p>
     </div>
 </body>
