--- a/blog/templates/blog/post/post_detail.html
+++ b/blog/templates/blog/post/post_detail.html
@@ -11,6 +11,7 @@
         <p>
             <a href="{% url "blog:post_share" post.id %}">
             Share this POST
+            </a>
         </p>
 
     {% with comments.count as total_comments %}
@@ -29,5 +30,5 @@
     {% empty %}
         <p>There are no comments.</p>
     {% endfor %}
-    
+    {% include "blog/post/includes/comment_form.html" %}
 {% endblock %}
